<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="30dp"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/img_signup"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                style="@style/text_semi_bold_24"
                android:layout_marginTop="50dp"/>

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:hint="@string/firstName"
                style="@style/text_base_font_16"
                android:background="@drawable/bg_input"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:hint="@string/lastName"
                style="@style/text_base_font_16"
                android:background="@drawable/bg_input"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                style="@style/text_base_font_16"
                android:background="@drawable/bg_input"
                android:layout_marginTop="20dp"
                android:paddingVertical="20dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                style="@style/text_base_font_16"
                android:background="@drawable/bg_input"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:paddingVertical="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreatAcc"
                style="@style/text_semi_bold_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button"
                android:text="@string/createAccount"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haveAccount"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_semi_bold_14"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/blue_500" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>