<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/img_login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/text_semi_bold_24"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:hint="@string/email"
        style="@style/text_base_font_16"
        android:background="@drawable/bg_input"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:hint="@string/password"
        style="@style/text_base_font_16"
        android:background="@drawable/bg_input"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:text="@string/forgetPass"
        android:textColor="@color/blue_500"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/text_semi_bold_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/btnLogin"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@color/gray_100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/gray_700"
            android:textStyle="bold"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@color/gray_100" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_facebook"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_google"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dontAccount"/>

        <TextView
            android:id="@+id/tvSiginup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_semi_bold_14"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/blue_500" />
    </LinearLayout>
</LinearLayout>